terminando questões de sala

--- a/notebooks/experimento01.ipynb
+++ b/notebooks/experimento01.ipynb
@@ -4,7 +4,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experimento - 1ra Unidade - Máquinas Síncronas"
+    "# 1 - Questões em sala\n",
+    "\n",
+    "1. **Em respeito a curva de magnetização do material, por que ela não bate no zero? Por que ela não continua reta?**\n",
+    "\n",
+    "Esse fenômeno acontece devido as características não-lineares do material ferromagnético utilizado no interior da máquina. Devido à histerese magnética e a saturação, mesmo que não haja fluxo magnético no interior do material, há um campo magnético residual no interior do máquina. \n",
+    "\n",
+    "2. **Como não queimar a máquina no ensaio de medição da resistência de armadura?**\n",
+    "\n",
+    "Durante este ensaio, é necessário que o experimentador tenha o controle sobre a corrente de armadura, não permitindo que ela passe do valor nominal da máquina. \n",
+    "\n",
+    "3. **Em respeito das máquinas síncronas construídas com eletroímã e com imã permanente, qual delas é mais eficiente?**\n",
+    "\n",
+    "A escolha entre uma máquina com ímã permanente e uma com eletroímã deve considerar as especificidades da aplicação. As máquinas com imã não requerem corrente de excitação para criar o campo magnético no rotor, o que elimina as perdas associadas ao cobre, e permitindo, assim serem mais eficientes em condições de operação em regime permanente. De modo análogo, as máquinas com eletroímã permitem um maior controle sobre o fluxo magnético do rotor, oferecendo maior flexibilidade e condições de operação para diferentes cargas.\n",
+    "\n",
+    "4. **Quais foram os cuidados tomados ao realizar a inserção do gerador síncrono na rede elétrica?**\n",
+    "\n",
+    "Para evitar danos ao gerador, à rede e aos equipamentos conectados é preciso que: \n",
+    "\n",
+    "1. As tensões eficazes de linha do gerador e da rede devem ser iguais.\n",
+    "2. Ambos sistemas devem possuir a mesma sequência de fases\n",
+    "\n",
+    "Primeiro, usando voltímetros, a corrente de campo da máquina que está entrando deve ser ajustada até que sua tensão de terminal seja igual à tensão de linha do sistema. Segundo, a sequência de fases do gerador deve ser comparada com a sequência de fases do sistema. Isso é feito a partir do método das três lâmpadas. Nessa abordagem, três lâmpadas incandescentes são conectadas aos terminais abertos da chave que liga o gerador ao sistema. À medida que a fase se modifica entre os dois sistemas, as lâmpadas inicialmente brilham muito (grande diferença de fase) e então brilham fracamente (pequena diferença de fase). Se as três lâmpadas brilharem e apagarem-se em conjunto, isso significa que os sistemas terão a mesma sequência de fases. Quando as três lâmpadas estiverem apagadas, a diferença de tensão entre elas é zero e os sistemas estão em fase.\n",
+    "\n",
+    "5. **Quem controla a potência ativa no gerador síncrono?**\n",
+    "\n",
+    "O controle da potência ativa do gerador síncrono está ligado ao motor de partida, também chamado de governador. Aumentar a tensão do governador, aumenta a velocidade de giro do rotor e, consequentemente, aumenta a potência ativa do gerador. \n",
+    "\n",
+    "6. **Como funciona o motor de relutância?**\n",
+    "\n",
+    "O principio de funcionamento dos motores de relutância está baseada na relutância magnética. Quando o estator do motor é energizado, cria-se um campo magnético ao redor do rotor. Como o rotor é de material ferromagnético, ele é atraído para a posição em que a relutância é mínima, ou seja, para onde o campo magnético é mais forte. À medida que o campo magnético no estator gira, o rotor tende a segui-lo, movendo-se continuamente para alinhar-se com o campo de menor relutância.\n",
+    "\n",
+    "7. **Qual a desvantagem associada ao uso do motor de reluntância?**\n",
+    "\n",
+    "A desvantagem associada do motor de relutância é o seu comportamento semelhante ao de um indutor. Por tender a ter um fator de potência baixo, significa que o motor consome mais potência reativa, o que exige uma instalação de equipamentos para corrigir o fator de potência. \n",
+    "\n",
+    "8. **Como funciona o compensador síncrono?**\n",
+    "\n",
+    "Um compensador síncrono é uma máquina síncrona clássica que é operada para fornecer somente energia reativa. Eles operam sem carga mecânica, desempenhando um papel crucial para a correção de fator de potência. Seu princípio de funcionamento baseia-se no fato de que, a depender da característica de operação, a máquina síncrona pode ser ajustada para fornecer ou absorver reativos do sistema elétrico. \n",
+    "\n",
+    "- Quando a máquina opera sub-excitada, o compensador absorve potência reativa, sendo útil para compensar cargas indutivas.  \n",
+    "\n",
+    "- Quando a máquins opera sobre-excitado, o compensador gera potência reativa, sendo útil para compensar cargas capacitivas.\n",
+    "\n",
+    "9. **Por que o motor de relutância possui pouco torque?**\n",
+    "\n",
+    "O motor de relutância possui pouco torque principalmente devido à sua natureza de operação e à forma como o torque é gerado. O torque em um motor de relutância é produzido pela tendência do rotor de se alinhar com as posições de menor relutância magnética criadas pelo campo magnético do estator. Essa tendência, embora eficiente em termos de simplicidade de design, não gera um torque muito elevado\n",
+    "\n",
+    "10. **Quais cuidados devem ser tomados durante a partida da máquina síncrona?**\n",
+    "\n",
+    "Para dar a partida em uma máquina síncrona, é preciso que: \n",
+    "\n",
+    "- Desligue-se a excitação da máquina\n",
+    "- Fazer um curto-circuito no circuito de campo\n",
+    "- Realizar a partida como motor de indução\n",
+    "\n",
+    "11. **Explique o ângulo de carga em função da estabilidade da máquina**\n",
+    "\n",
+    "O ângulo de carga $\\delta$ está intrinsicamente associado à estabilidade estática da máquina síncrona. O limite de estabilidade estática está relacionado com a sua capacidade de manter o sincronismo durante a operação da máquina. A medida que mais cargas são inseridas em paralelo à máquina, mais torque é exigido. Para manter o sincronismo, há um aumento no ângulo de carga. Quando o ângulo de carga é igual a 90 graus, a máquina chega ao seu limite de estabilidade. Caso seja exigido mais torque, a máquina perde o seu sincronismo e, consequentemente, a sua estabilidade. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 - Introdução aos ensaios com Máquinas Síncronas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 - Realização dos ensaios "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4 - Análise e discussão dos resultados"
    ]
   },
   {
@@ -74,7 +152,7 @@
     "CC = np.linspace(0, np.max(If_cc), n_amostras)\n",
     "\n",
     "# Configuração do gráfico\n",
-    "fig,ax1 = plt.subplots(figsize = (7,8))\n",
+    "fig,ax1 = plt.subplots(figsize = (5,6))\n",
     "ax1.set_title('Ensaio de curto-circuito e circuito aberto')\n",
     "ax1.set_xlabel('Corrente de campo [A]')\n",
     "ax1.set_ylabel('Tensão de terminal [V]')\n",
