inicio do relatorio: seções 2 e 3

--- a/notebooks/experimento01.ipynb
+++ b/notebooks/experimento01.ipynb
@@ -59,6 +59,8 @@
     "- Fazer um curto-circuito no circuito de campo\n",
     "- Realizar a partida como motor de indução\n",
     "\n",
+    "O motor síncrono desenvolve conjugado apenas na velocidade síncrona e, assim, não tem conjugado de partida. Para fazer com que um motor síncrono tenha partida própria, um enrolamento do tipo gaiola de esquilo é inserido.\n",
+    "\n",
     "11. **Explique o ângulo de carga em função da estabilidade da máquina**\n",
     "\n",
     "O ângulo de carga $\\delta$ está intrinsicamente associado à estabilidade estática da máquina síncrona. O limite de estabilidade estática está relacionado com a sua capacidade de manter o sincronismo durante a operação da máquina. A medida que mais cargas são inseridas em paralelo à máquina, mais torque é exigido. Para manter o sincronismo, há um aumento no ângulo de carga. Quando o ângulo de carga é igual a 90 graus, a máquina chega ao seu limite de estabilidade. Caso seja exigido mais torque, a máquina perde o seu sincronismo e, consequentemente, a sua estabilidade. "
@@ -68,14 +70,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 - Introdução aos ensaios com Máquinas Síncronas"
+    "# 2 - Introdução aos ensaios com Máquinas Síncronas\n",
+    "\n",
+    "## 2.1 Máquina Síncrona\n",
+    "\n",
+    "As máquinas síncronas são equipamentos elétricos rotativos e operam com base no princípio da sincronização entre o campo magnético rotativo do estator e o campo magnético do rotor. Essa sincronia garante a operação constante e eficiente da máquina. O Estator é composto por enrolamentos trifásicos distribuídos em ranhuras e, quando alimentado por uma fonte de tensão alternada trifásica, cria um campo magnético rotativo. A velocidade desse campo é diretamente proporcional à frequência da tensão aplicada. O Rotor possui um enrolamento de campo alimentado por corrente contínua, o que gera um campo magnético estacionário. A interação entre os campos do estator e do rotor produz um torque eletromagnético que impulsiona o rotor a acompanhar a velocidade do campo rotativo do estator.\n",
+    "\n",
+    "\n",
+    "## 2.2 - Objetivo dos ensaios realizados\n",
+    "\n",
+    "Com o objetivo de estudar o funcionamento das máquinas síncronas para ambos os modos de operação, foi realizado diversos ensaios no Laborátorio de Máquinas Elétricas da Universidade Federal de Campina Grande, tornando possível verificar a realização dos ensaios de levantamento dos parâmetros da máquina e consolidar o conhecimento à respeito das máquinas síncronas. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 - Realização dos ensaios "
+    "# 3 - Realização dos ensaios \n",
+    "\n",
+    "Um conjunto simples de ensaios pode ser usado para determinar os parâmetros significativos de uma máquina síncrona, como a reatância síncrona. Dois desses ensaios são o ensaio a vazio, em que a tensão de terminal da máquina é medida em função da corrente de campo e o ensaio de curto-circuito, em que a armadura é curto-circuitada e a corrente de armadura de curto-circuito é medida em função da corrente de campo. O ensaio a vazio fornece informações sobre as exigências de excitação, as perdas no núcleo e (para máquinas rotativas) as perdas por atrito e ventilação, ao passo que um ensaio de curto-circuito fornece informações sobre as reações magnéticas da corrente de carga, as impedâncias de dispersão e as perdas associadas às correntes de carga.\n",
+    "\n",
+    "Além disto, também é fundamental estudar o comportamento da máquina frente à alterações na natureza da carga e também em relação à potência que ela consome. Para isto, foram preparados ensaios de verificação do comportamento da máquina frente à mudanças na carga com e sem controle da tensão de terminal. \n",
+    "\n",
+    "## 3.1 Equipamento e Instrumentos Utilizados\n",
+    "\n",
+    "Para a realização dos ensaios no laboratório, foram utilizados: \n",
+    "\n",
+    "1. 1 Máquina Síncrona trifásica 4 polos;\n",
+    "2. 2 varivolts;\n",
+    "3. 3 fontes CC;\n",
+    "4. 5 multímetros;\n",
+    "5. 2 wattímetros;\n",
+    "6. 1 máquina CC com excitação independente;\n",
+    "7. 1 painel de cargas ligada em delta na voltagem de 220V (lâmpadas);\n",
+    "8. 1 conta giros – tacômetro digital;\n",
+    "9. Fios e cabos;\n",
+    "\n",
+    "A máquina síncrona utilizada possui uma potência nominal de $2$ **kVA** e tensão nominal de $220$ **V**. Os dados de placa da máquina podem ser observados na Tabela 1: \n",
+    "\n",
+    "<div align = 'center'>\n",
+    "\n",
+    "|      Potência Nominal       |   2 kVA  |\n",
+    "|:---------------------------:|:--------:|\n",
+    "|            Polos            |     4    |\n",
+    "|     Velocidade Síncrona     | 1800 rpm |\n",
+    "| Corrente Máxima de Armadura |    5 A   |\n",
+    "|   Corrente Máxima de Campo  |   0.6 A  |\n",
+    "|  Tensão Nominal de Armadura |   220 V  |\n",
+    "|      Fator de Potência      |    0.8   |\n",
+    "\n",
+    "**Tabela 01:** Dados de placa da Máquina Síncrona utilizada nos ensaios\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -87,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
