finalizando etapa de pesquisa

--- a/notebooks/experimento01.ipynb
+++ b/notebooks/experimento01.ipynb
@@ -457,6 +457,33 @@
    "source": [
     "# 6 - Ensaio de funcionamento do Compensador Síncrono"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7 - Estudo sobre o Controle de Tensão para Geradores Síncronos\n",
+    "\n",
+    "O controle da tensão terminal de um gerador síncrono é essencial para garantir a estabilidade e a qualidade do fornecimento de energia elétrica. Para manter essa tensão constante, especialmente quando há variações na carga, é necessário ajustar a excitação do campo da máquina, o que aumenta ou diminui a força eletromotriz (FEM) induzida no estator.\n",
+    "\n",
+    "O ajuste da excitação em um gerador síncrono é feito pela variação da corrente que passa pelo enrolamento do campo (também conhecido como enrolamento de rotor). A corrente de excitação é diretamente proporcional à força magnética gerada pelo rotor, que, por sua vez, controla a FEM induzida no estator. Quando há um aumento na solicitação de potência pela carga, a excitação é aumentada para manter a tensão terminal estável, compensando a queda que ocorreria devido ao aumento da corrente de carga.\n",
+    "\n",
+    "Sem um controle de excitação, a tensão terminal do gerador pode variar significativamente com mudanças na carga. Isso pode resultar em sobretensões ou subtensões, afetando a estabilidade do sistema elétrico e a segurança dos equipamentos conectados. Assim, a operação do gerador se torna menos eficiente, com possíveis perdas de energia e redução da capacidade de fornecimento de potência.\n",
+    "\n",
+    "O ajuste da excitação é realizado por um sistema conhecido como Regulador Automático de Tensão (AVR - Automatic Voltage Regulator). O AVR monitora a tensão terminal do gerador e ajusta a corrente de excitação do campo de acordo com a necessidade para manter a tensão no nível desejado.\n",
+    "\n",
+    "Os AVRs modernos são frequentemente baseados em microcontroladores ou sistemas digitais de controle, que oferecem alta precisão e permitem ajustes rápidos e eficientes. Esses dispositivos são programados para monitorar a tensão terminal e comparar com um valor de referência. Se a tensão medida se desviar do valor de referência, o AVR ajusta a corrente de excitação para corrigir a tensão.\n",
+    "\n",
+    "<div align = 'center'>\n",
+    "<img src=\"../images/01/avr.png\" alt=\"Descrição da imagem\" width=\"250\"/>\n",
+    "\n",
+    "**Figura 0X:** Controlodor AVR Modelo Sx460 WEG\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "O controle de tensão em geradores síncronos é realizado pelo AVR é através de uma malha de controle em malha fechada. A malha de controle envolve a medição contínua da tensão terminal do gerador, que é comparada com um valor de referência (setpoint). O erro resultante (a diferença entre a tensão medida e a tensão de referência) é usado para ajustar a corrente de excitação. O regulador de tensão atua como o controlador dentro dessa malha, aplicando uma ação corretiva para minimizar o erro. Esse sistema de controle garante que a tensão terminal permaneça estável mesmo diante de variações na carga ou nas condições de operação."
+   ]
   }
  ],
  "metadata": {
@@ -475,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
