finalizando relatorio 2° unidade

--- a/notebooks/Laboratório Máquinas - Primeira Unidade.ipynb
+++ b/notebooks/Laboratório Máquinas - Primeira Unidade.ipynb
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20039ae14e0>"
+       "<matplotlib.legend.Legend at 0x2477f3c55d0>"
       ]
      },
      "execution_count": 3,
@@ -383,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2003c01e410>"
+       "<matplotlib.legend.Legend at 0x2477f7c5db0>"
       ]
      },
      "execution_count": 6,
@@ -478,7 +478,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2003beedff0>"
+       "<matplotlib.legend.Legend at 0x2477f8d2fb0>"
       ]
      },
      "execution_count": 7,
